fix(pictogram-item): mpbile web component alignment

--- a/packages/styles/scss/components/pictogram-item/_pictogram-item.scss
+++ b/packages/styles/scss/components/pictogram-item/_pictogram-item.scss
@@ -52,9 +52,9 @@
       height: 80px;
       width: 80px;
     }
-    ::slotted(svg) {
-      margin-left: $carbon--spacing-05;
-    }
+  }
+  :host(#{$dds-prefix}-pictogram-item) {
+    padding-left: $carbon--spacing-05;
   }
 }
 
